MDL-47494 ddmarker: OU-2454	Fix for text boxes in feedback in IE7 being broken in half by br

--- a/question/type/ddmarker/styles.css
+++ b/question/type/ddmarker/styles.css
@@ -95,6 +95,7 @@ form.mform fieldset#previewareaheader div.markertexts span.markertext {
     -khtml-opacity: 0.6;
     opacity: 0.6;
     margin: 5px;
+    display : inline-block;
 }
 .que.ddmarker div.dragitems img.target {
     position:absolute;
